# FLIP-CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/desktop/: main.cpp
src/sim/: Fluid.h
